<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_1_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_1_1"/>
    <Button
        android:id="@+id/button_1_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_1_2"/>
    <Button
        android:id="@+id/button_1_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_1_3"/>
    <Button
        android:id="@+id/button_1_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_1_4"/>
    <Button
        android:id="@+id/button_1_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_1_5"/>
    <Button
        android:id="@+id/button_1_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_1_6"/>

    <Button
        android:id="@+id/close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close" />

</LinearLayout>